--- a/kitools/manifest.json
+++ b/kitools/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "K.I.Tools",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "manifest_version": 2,
 
     "description": "KIT学生にとって便利なツールを提供します",
@@ -11,10 +11,11 @@
       "48": "icon/icon48.png",
       "128": "icon/icon128.png"
     },
-    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://apis.google.com; object-src 'self'",
 
     "permissions": [
       "storage",
+      "tabs",
       "http://portal10.mars.kanazawa-it.ac.jp/",
       "https://ras.kanazawa-it.ac.jp/",
       "http://www.amazon.co.jp/",
@@ -44,12 +45,28 @@
         "js": ["js/jquery.min.js", "js/amalin.js"],
         "css": ["css/amalin.css"],
         "run_at": "document_end"
+      },{
+        // Google Calendar Authorization Page
+        "matches": [
+          "https://accounts.google.com/o/oauth2/*"
+        ],
+        "js": ["js/gcalapi.js"],
+        "run_at": "document_end"
       }
     ],
 
+    "page_action": {
+      "default_icon": {
+        "19": "icon/icon19.png",
+        "38": "icon/icon38.png"
+      },
+      "default_title": "Import to Google Calendar from KIT Calendar",
+      "default_popup": "popup.html"
+    },
+
     "background": {
       "scripts": [
-        "js/analytics.js"
+        "js/background.js"
       ],
       "persistent": false
     },
