--- a/kitools/manifest.json
+++ b/kitools/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "K.I.Tools",
-    "version": "1.3.1",
+    "version": "1.4.0",
     "manifest_version": 2,
     "minimum_chrome_version": "22",
 
@@ -33,7 +33,7 @@
           "https://ras.kanazawa-it.ac.jp/portal/,DanaInfo=portal10.mars.kanazawa-it.ac.jp+student",
           "https://ras.kanazawa-it.ac.jp/dana-na/auth/url_default/welcome.cgi"
         ],
-        "js": ["js/cryptico.min.js","js/portal.js"],
+        "js": ["js/lib/cryptico.min.js","js/portal.js"],
         "run_at": "document_end"
       },{
         "matches": [
@@ -45,7 +45,7 @@
           "http://www.amazon.co.jp/gp/bestsellers/books/*",
           "http://linkit.kanazawa-it.ac.jp/*"
         ],
-        "js": ["js/jquery.min.js", "js/amalin.js"],
+        "js": ["js/lib/jquery.min.js", "js/amalin.js"],
         "css": ["css/amalin.css"],
         "run_at": "document_end"
       },{
@@ -63,18 +63,14 @@
       }
     ],
 
-    "page_action": {
-      "default_icon": {
-        "19": "icon/icon19.png",
-        "38": "icon/icon38.png"
-      },
-      "default_title": "Import to Google Calendar from KIT Calendar",
+    "browser_action": {
+      "default_icon": "icon/icon38.png",
       "default_popup": "popup.html"
     },
 
     "background": {
       "scripts": [
-        "js/busdata.js",
+        "js/lib/busdata.js",
         "js/background.js"
       ],
       "persistent": false
