リファクタリング ・日付と時間取得をライブラリ化 ・.crx廃止によるコードの削除 ・popup.js -> calendar.js ・その他細かい修正

--- a/kitools/manifest.json
+++ b/kitools/manifest.json
@@ -57,7 +57,7 @@
         "matches": [
           "*://*/*"
         ],
-        "js": ["js/busnotify.js"],
+        "js": ["js/lib/getnowdate.js", "js/busnotify.js"],
         "run_at": "document_start"
       }
     ],
