自動ログイン     全体的に改修     暗号化アルゴリズムを強化

--- a/login/manifest.json
+++ b/login/manifest.json
@@ -1,22 +1,16 @@
 {
-  "name": "K.I.Tools",
+  "name": "AutoLogin",
   "version": "0.1",
   "manifest_version": 2,
   "minimum_chrome_version": "22",
 
-  "description": "KIT学生にとって便利なツールを提供します",
+  "description": "金沢工業大学",
   "homepage_url": "https://github.com/tknhs/K.I.Tools",
   "icons": {
-    "16": "icon/icon16.png",
-    "48": "icon/icon48.png",
-    "128": "icon/icon128.png"
+    "16": "assets/icon/icon16.png",
+    "48": "assets/icon/icon48.png",
+    "128": "assets/icon/icon128.png"
   },
-
-  "permissions": [
-    "storage",
-    "http://portal10.mars.kanazawa-it.ac.jp/",
-    "https://ras.kanazawa-it.ac.jp/"
-  ],
 
   "content_scripts": [
     {
@@ -27,10 +21,18 @@
         "https://ras.kanazawa-it.ac.jp/portal/,DanaInfo=portal10.mars.kanazawa-it.ac.jp+student",
         "https://ras.kanazawa-it.ac.jp/dana-na/auth/url_default/welcome.cgi"
       ],
-      "js": ["js/lib/cryptico.min.js","js/portal.js"],
+      "js": ["assets/js/portal.js"],
       "run_at": "document_end"
     }
   ],
+
+  "background": {
+    "scripts": [
+      "assets/js/lib/cryptico.min.js",
+      "assets/js/background.js"
+    ],
+    "persistent": false
+  },
 
   "options_page": "options.html"
 }
