アマリン・バス・ログイン     拡張機能名称変更 ログイン     国際化

--- a/amalin/manifest.json
+++ b/amalin/manifest.json
@@ -1,6 +1,6 @@
 {
   "default_locale":"ja",
-  "name": "__MSG_extName__",
+  "name": "K.I.T. __MSG_extName__",
   "version": "0.1",
   "manifest_version": 2,
 
