--- a/login/manifest.json
+++ b/login/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "AutoLogin",
+  "default_locale": "ja",
+  "name": "K.I.T. __MSG_extName__",
   "version": "0.1",
   "manifest_version": 2,
   "minimum_chrome_version": "22",
-
-  "description": "金沢工業大学",
+  "description": "__MSG_extDesc__",
   "homepage_url": "https://github.com/tknhs/K.I.Tools",
   "icons": {
     "16": "assets/icon/icon16.png",
