--- a/login/manifest.json
+++ b/login/manifest.json
@@ -1,7 +1,7 @@
 {
   "default_locale": "ja",
-  "name": "K.I.T. __MSG_extName__",
-  "version": "0.1",
+  "name": "__MSG_extName__",
+  "version": "0.0.0.1",
   "manifest_version": 2,
   "minimum_chrome_version": "22",
   "description": "__MSG_extDesc__",
