--- a/amalin/manifest.json
+++ b/amalin/manifest.json
@@ -1,7 +1,7 @@
 {
   "default_locale":"ja",
   "name": "__MSG_extName__",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "manifest_version": 2,
 
   "description": "__MSG_extDesc__",
@@ -21,7 +21,7 @@
         "http://www.amazon.co.jp/gp/bestsellers/books/*",
         "http://linkit.kanazawa-it.ac.jp/*"
       ],
-      "js": ["js/lib/jquery.min.js", "js/amalin.js"],
+      "js": ["js/lib/jquery.min.js", "js/lib/underscore.min.js", "js/amalin.js"],
       "css": ["css/amalin.css"],
       "run_at": "document_end"
     }
