--- a/pnc/manifest.json
+++ b/pnc/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "K.I.T. ポータル告知クリーナー",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "manifest_version": 2,
   "minimum_chrome_version": "22",
   "description": "金沢工業大学 -非公式-",
@@ -22,7 +22,7 @@
         "https://ras.kanazawa-it.ac.jp/portal/,DanaInfo=portal10.mars.kanazawa-it.ac.jp+student"
       ],
       "js": ["assets/js/content.js"],
-      "css": ["assets/css/content.css"],
+      "css": ["assets/css/content.css", "assets/css/modal.css"],
       "run_at": "document_end"
     }
   ]
